--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 body {
-  margin: 0;
-  padding: 0;
-  user-select: none;
+    margin: 0;
+    padding: 0;
+    user-select: none;
+}
+::-webkit-scrollbar {
+    width: 0;
 }
